--- a/sair.html
+++ b/sair.html
@@ -3,13 +3,13 @@
 <title>Rafael</title>
 </head>
 <body>
-<label type = "text" class = "label">Saida</label>
+<label type = "text" id= "ll" class = "label">Saida</label>
 </body>
 </html>
 <style>
 .label{
 position:absolute;
-color:blue;
+color:red;
 font-size:60px;
 width:100px;
 height:50px;
