--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <head>
 <title>Rafael</title>
 </head>
-<form action ="/sair.html" method="post">
+<form action ="/a.mp3" method="post">
 <label type = "text" class = "label">Formulario</label><br></br>
 <label type = "text" class = "label2">xxxx</label><br></br>
 <input type = "edit" id = "myedit" name ="myt" class = "me"><br></br>
